--- a/css/10-layout.css
+++ b/css/10-layout.css
@@ -40,6 +40,9 @@ main{
 }
 
 .canvas{
+  touch-action: none;     /* blocks browser pan/zoom on this element */
+  overscroll-behavior: none;
+
   position:absolute;
   inset:0;
   cursor:grab;
